feat(agricultor): mejora subida y visualización de imágenes en MisProductos; UI consistente y validaciones; gateway sirve /uploads y reescribe /api/products